// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/preuves/AddPreuveModal/FileItem Completed 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="px-2 py-1 text-sm text-bf500 w-full font-bold whitespace-nowrap text-ellipsis overflow-hidden"
    data-test="file-completed"
  >
    feuille de route des élus responsables CAE.pdf
  </div>
</div>
`;

exports[`Storyshots ui/shared/preuves/AddPreuveModal/FileItem Failed Duplicate 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="py-1 mr-4 group flex flex-col hover:bg-grey925"
    data-test="file-failed"
  >
    <div
      className="px-2 pt-1 flex justify-between"
    >
      <div
        className="flex w-11/12"
      >
        <div
          className="text-sm whitespace-nowrap text-ellipsis overflow-hidden"
          data-test="name"
        >
          fichier.xls
        </div>
        <div
          className="text-sm min-w-max text-grey-6 pl-2"
          data-test="size"
        >
          (
          15 Mo
          )
        </div>
      </div>
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
        onClick={[Function]}
      />
    </div>
    <div
      className="bg-info-2 mt-4"
    >
      <div
        className="py-3 flex gap-4 px-4 bg-info-2"
      >
        <span
          className="ri-information-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-info-1"
        />
        <div
          className="flex flex-col gap-3 justify-center"
        >
          <div
            className="text-sm [&_*]:text-sm font-medium text-grey-9 [&_*]:text-grey-9 [&>*]:last:mb-0 flex flex-col gap-3"
          >
            <p>
              Ce fichier sera ajouté directement via votre bibliothèque de fichiers car il a déjà été téléversé
              .
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/shared/preuves/AddPreuveModal/FileItem Failed Duplicated And Renamed 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="py-1 mr-4 group flex flex-col hover:bg-grey925"
    data-test="file-failed"
  >
    <div
      className="px-2 pt-1 flex justify-between"
    >
      <div
        className="flex w-11/12"
      >
        <div
          className="text-sm whitespace-nowrap text-ellipsis overflow-hidden"
          data-test="name"
        >
          nouveau nom.xls
        </div>
        <div
          className="text-sm min-w-max text-grey-6 pl-2"
          data-test="size"
        >
          (
          15 Mo
          )
        </div>
      </div>
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
        onClick={[Function]}
      />
    </div>
    <div
      className="bg-info-2 mt-4"
    >
      <div
        className="py-3 flex gap-4 px-4 bg-info-2"
      >
        <span
          className="ri-information-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-info-1"
        />
        <div
          className="flex flex-col gap-3 justify-center"
        >
          <div
            className="text-sm [&_*]:text-sm font-medium text-grey-9 [&_*]:text-grey-9 [&>*]:last:mb-0 flex flex-col gap-3"
          >
            <p>
              Ce fichier sera ajouté directement via votre bibliothèque de fichiers car il a déjà été téléversé
               
              sous le nom 
              <i>
                fichier.xls
                .
              </i>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/shared/preuves/AddPreuveModal/FileItem Failed Format And Size 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="py-1 mr-4 group flex flex-col hover:bg-grey925"
    data-test="file-failed"
  >
    <div
      className="px-2 pt-1 flex justify-between"
    >
      <div
        className="flex w-11/12"
      >
        <div
          className="text-sm whitespace-nowrap text-ellipsis overflow-hidden"
          data-test="name"
        >
          mauvais format et taille.exe
        </div>
        <div
          className="text-sm min-w-max text-grey-6 pl-2"
          data-test="size"
        >
          (
          80 Mo
          )
        </div>
      </div>
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
        onClick={[Function]}
      />
    </div>
    <div
      className="px-2 py-2 fr-fi-alert-line fr-fi--sm text-error425 text-xs"
      data-test="error"
    >
       
      Ce fichier ne peut pas être téléversé car son format n’est pas supporté et il dépasse la taille maximale autorisée
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/shared/preuves/AddPreuveModal/FileItem Failed To Upload 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="py-1 mr-4 group flex flex-col hover:bg-grey925"
    data-test="file-failed"
  >
    <div
      className="px-2 pt-1 flex justify-between"
    >
      <div
        className="flex w-11/12"
      >
        <div
          className="text-sm whitespace-nowrap text-ellipsis overflow-hidden"
          data-test="name"
        >
          fichier.doc
        </div>
        <div
          className="text-sm min-w-max text-grey-6 pl-2"
          data-test="size"
        >
          (
          15 Mo
          )
        </div>
      </div>
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
        onClick={[Function]}
      />
    </div>
    <div
      className="px-2 py-2 fr-fi-alert-line fr-fi--sm text-error425 text-xs"
      data-test="error"
    >
       
      Ce fichier n’a pas pu être téléversé
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/shared/preuves/AddPreuveModal/FileItem Failed Too Big 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="py-1 mr-4 group flex flex-col hover:bg-grey925"
    data-test="file-failed"
  >
    <div
      className="px-2 pt-1 flex justify-between"
    >
      <div
        className="flex w-11/12"
      >
        <div
          className="text-sm whitespace-nowrap text-ellipsis overflow-hidden"
          data-test="name"
        >
          Rapport d’activités 2019-2020 et rapport DD 2020 nom vraiment trop long.doc
        </div>
        <div
          className="text-sm min-w-max text-grey-6 pl-2"
          data-test="size"
        >
          (
          60 Mo
          )
        </div>
      </div>
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
        onClick={[Function]}
      />
    </div>
    <div
      className="px-2 py-2 fr-fi-alert-line fr-fi--sm text-error425 text-xs"
      data-test="error"
    >
       
      Ce fichier ne peut pas être téléversé car il dépasse la taille maximale autorisée
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/shared/preuves/AddPreuveModal/FileItem Failed Unknown Format 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="py-1 mr-4 group flex flex-col hover:bg-grey925"
    data-test="file-failed"
  >
    <div
      className="px-2 pt-1 flex justify-between"
    >
      <div
        className="flex w-11/12"
      >
        <div
          className="text-sm whitespace-nowrap text-ellipsis overflow-hidden"
          data-test="name"
        >
          Logo-comcom.SVG
        </div>
        <div
          className="text-sm min-w-max text-grey-6 pl-2"
          data-test="size"
        >
          (
          15 Mo
          )
        </div>
      </div>
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line invisible group-hover:visible"
        onClick={[Function]}
      />
    </div>
    <div
      className="px-2 py-2 fr-fi-alert-line fr-fi--sm text-error425 text-xs"
      data-test="error"
    >
       
      Ce fichier ne peut pas être téléversé car son format n’est pas supporté
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/shared/preuves/AddPreuveModal/FileItem Running 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="pl-2 pr-4 py-1 flex justify-between"
    data-test="file-running"
  >
    <div
      className="w-8/12 flex justify-between"
    >
      <div
        className="text-sm font-bold whitespace-nowrap text-ellipsis overflow-hidden"
        data-test="name"
      >
        Délibération-Engagement-PCAET.pdf
      </div>
      <div
        className="min-w-max text-sm text-grey-6 pl-2"
        data-test="size"
      >
        (
        87 Ko
        )
      </div>
    </div>
    <div
      className="w-3/12 flex items-center"
    >
      <div
        className="w-80 h-3.5 inline-block"
      >
        <div
          className="w-full h-full bg-grey925"
        >
          <div
            className="h-full bg-primary max-w-full"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>
      </div>
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/shared/preuves/AddPreuveModal/FileItem Running 2 1`] = `
<div
  style={
    Object {
      "border": "1px dashed",
      "maxWidth": 548,
    }
  }
>
  <div
    className="pl-2 pr-4 py-1 flex justify-between"
    data-test="file-running"
  >
    <div
      className="w-8/12 flex justify-between"
    >
      <div
        className="text-sm font-bold whitespace-nowrap text-ellipsis overflow-hidden"
        data-test="name"
      >
        Rapport d’activités 2019-2020 et rapport DD 2020.doc
      </div>
      <div
        className="min-w-max text-sm text-grey-6 pl-2"
        data-test="size"
      >
        (
        8.35 Mo
        )
      </div>
    </div>
    <div
      className="w-3/12 flex items-center"
    >
      <div
        className="w-80 h-3.5 inline-block"
      >
        <div
          className="w-full h-full bg-grey925"
        >
          <div
            className="h-full bg-primary max-w-full"
            style={
              Object {
                "width": "0%",
              }
            }
          />
        </div>
      </div>
      <button
        className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-close-line"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;
